--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,12 @@
+CRITICAL
 - Need to cancel multipart uploads when upload is blocked by file limits or by error
+
+HIGH
 - Improve other endpoints error handling
+
+MEDIUM
 - Standardize error treatment in code (some places use log.fatal, others use log.print, others return http.errors)
+
+LOW
 - Rate-limit requests somehow (maybe IP addresses?)
-- Head file before generating download link (that way we can check if the upload has finished)
+[DONE] Head file before generating download link (that way we can check if the upload has finished)
